# juicy-gcode

./: .gitignore  .travis.yml  Approx.hs  BiArc.hs  ChangeLog.md  CircularArc.hs  CubicBezier.hs  GCode.hs  LICENSE  Line.hs  Main.hs  README.md  Render.hs  Svg2GCode.hs  SvgArcSegment.hs  TestStage1.hs  Transformation.hs  Types.hs  appveyor.yml  juicy-gcode.cabal  stack.yaml  x.gcode
resources/tests/: arrow.gcode  arrow.linear.gcode  doggo.gcode  doggo.linear.gcode  duck.gcode  duck.linear.gcode  line.gcode  line.linear.gcode  ninja_turtles.gcode  ninja_turtles.linear.gcode  polytest.gcode  polytest.linear.gcode  testarc.gcode  testarc.linear.gcode  testbezier.gcode  testbezier.linear.gcode  testcircle.gcode  testcircle.linear.gcode  testqbezier.gcode  testqbezier.linear.gcode  testrect.gcode  testrrect.gcode  testrrect.linear.gcode  testsmoothbezier.gcode  testsmoothbezier.linear.gcode  testsmoothqbezier.gcode  testsmoothqbezier.linear.gcode  testtext.gcode  testtext.linear.gcode  testtransform.gcode  testtransform.linear.gcode  thing.gcode  thing.linear.gcode  thumbsup.gcode  thumbsup.linear.gcode  viewBox2.gcode  viewbox.gcode  zebra.gcode  zebra.linear.gcode
resources/tests/color/: config.yml  current_color.gcode  flavor.yml  lines.gcode  lines.linear.gcode  style.gcode
src/: Approx.hs  BiArc.hs  BoundingBox.hs  CircularArc.hs  CubicBezier.hs  DrawOp.hs  Error.hs  GCode.hs  Geom.hs  Graphics.hs  Line.hs  LineSegment.hs  Main.hs  Render.hs  SVGExt.hs  SvgArcSegment.hs  TestStage1.hs  Transformation.hs  Types.hs  Utils.hs
src/Approx/: BiArc.hs  Linear.hs
src/Geom/: BiArc.hs  CircularArc.hs  CubicBezier.hs  Line.hs  LineSegment.hs  SvgArcSegment.hs  Transformation.hs
src/Graphics/: BiArc.hs  CircularArc.hs  CubicBezier.hs  Curve.hs  Line.hs  LineSegment.hs  Path.hs  Point.hs  SvgArcSegment.hs  Transformation.hs
src/Interpol/: BiArc.hs  Linear.hs
tests/: generate-gcode.sh  test-svg.sh
