name:                juicy-gcode
version:             0.2.0.2
license:             BSD3
license-file:        LICENSE
author:              dlacko
maintainer:          dlacko@gmail.com
stability:           experimental
synopsis:            SVG to G-Code converter
category:            Graphics
homepage:            https://github.com/domoszlai/juicy-gcode
bug-reports:         https://github.com/domoszlai/juicy-gcode/issues
build-type:          Simple
description:
  SVG to G-code converter that aims to support most SVG features. The flavor of the generated G-Code can be influenced providing a configuration file.

extra-source-files:  ChangeLog.md, README.md
cabal-version:       >=1.10
executable juicy-gcode
  hs-source-dirs:           src
  main-is:                  Main.hs

  other-modules:            Approx BiArc CircularArc CubicBezier GCode Line Render SvgArcSegment Transformation Types SVGExt Paths_juicy_gcode

  build-depends:
    base                    >=4.8    && <5,
    lens                    >=4.15.4 && <4.20,
    linear                  >=1.20   && <1.22,
    optparse-applicative    >=0.13   && <0.20,
    configurator            >=0.3    && <0.4,
    text                    >=1.2.2  && <1.3,
    matrix                  >=0.3.5  && <0.4,
    svg-tree                >=0.6    && <0.7,
    gitrev                  >=1.3.0  && <1.4

  GHC-Options:              -Wall
  default-language:         Haskell2010

Source-repository head
  Type:     git
  Location: https://github.com/domoszlai/juicy-gcode
