name:                juicy-gcode
version:             1.0.0.0
license:             BSD3
license-file:        LICENSE
author:              dlacko
maintainer:          dlacko@gmail.com
stability:           experimental
synopsis:            SVG to G-Code converter
category:            Graphics
homepage:            https://github.com/domoszlai/juicy-gcode
bug-reports:         https://github.com/domoszlai/juicy-gcode/issues
build-type:          Simple
description:
  SVG to G-code converter that aims to support most SVG features. It provides flexible options for curve approximation and allows configurable GCode generation based on color information.

extra-source-files:  ChangeLog.md, README.md
cabal-version:       >=1.10
executable juicy-gcode
  hs-source-dirs:           src
  main-is:                  Main.hs

  other-modules:            Approx.BiArc
                            Approx.Linear
                            Graphics.BiArc
                            Graphics.CircularArc 
                            Graphics.CubicBezier
                            Graphics.Curve
                            Graphics.Line 
                            Graphics.LineSegment
                            Graphics.Path
                            Graphics.Point
                            Graphics.Transformation 
                            GCode                           
                            Render   
                            Utils
                            SvgArcSegment 
                            SVGExt 
                            Paths_juicy_gcode

  build-depends:
    base                    >=4.8    && <5,
    lens                    >=4.15.4 && <5.3,
    linear                  >=1.20   && <1.23,
    optparse-applicative    >=0.13   && <0.20,
    aeson                   >=1.5    && <2.2,
    yaml                    >=0.11.8 && <0.12,
    text                    >=1.2.2  && <1.3 || >=2.0 && <2.1,
    matrix                  >=0.3.5  && <0.4,
    svg-tree                >=0.6    && <0.7,
    gitrev                  >=1.3.0  && <1.4,
    JuicyPixels             >=3.3.7  && <3.4,
    unordered-containers    >=0.2.16 && <0.3

  GHC-Options:              -Wall
  default-language:         Haskell2010

Source-repository head
  Type:     git
  Location: https://github.com/domoszlai/juicy-gcode
